# AgentSquire

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  harnesses.md
scripts/: clean-venv-smoke.sh  e2e-wheel-test.sh
src/agentsquire/: __init__.py  cli.py  console.py  harnesses.py  hashing.py  interactive.py  roots.py  skills.py  sources.py  staleness.py  stamping.py  verbs.py
src/agentsquire/skills/developing-with-agentsquire/: SKILL.md
tests/: test_api_lifecycle.py  test_backends.py  test_bundled_skill.py  test_bundled_source.py  test_cli_group.py  test_console.py  test_console_skills.py  test_console_staleness.py  test_default_union_wiring.py  test_docs_snippets.py  test_duplicate_skill_cli.py  test_entry_point.py  test_first_available_source.py  test_guide.py  test_guide_packaging.py  test_harness_registry.py  test_hash.py  test_install.py  test_interactive_install.py  test_interactive_uninstall.py  test_package.py  test_reference_doc.py  test_repo_skills_docs.py  test_repo_skills_packaging.py  test_root_b_resolution.py  test_root_overrides.py  test_skill_model.py  test_source_seam.py  test_staleness_check.py  test_status.py  test_uninstall.py  test_union_default_fixtures.py  test_union_source.py  test_update.py  test_verify_skill_roots.py
