[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentsquire"
version = "0.2.1"
description = "Let a Python package carry its own agent integrations and install them into whatever agent harness is present."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "TacoTakumi" }]
keywords = ["agent", "skills", "agent-skills", "claude-code", "cli", "harness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml",
    "click",
]

[dependency-groups]
dev = [
    "build",
    "hatchling",
    "pip",
    "pytest",
    "typer>=0.26.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
