[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentsquire"
version = "0.3.0"
description = "Let a Python package carry its own agent integrations and install them into whatever agent harness is present."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "TacoTakumi" }]
keywords = ["agent", "skills", "agent-skills", "claude-code", "cli", "harness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml",
    "click",
]

[project.scripts]
squire = "agentsquire.console:main"
agentsquire = "agentsquire.console:main"

# agentsquire dogfoods its own consumer contract: it carries one bundled skill
# (developing-with-agentsquire) and marks itself skill-carrying under the same
# entry-point group it tells consumers to use. Nothing reads this at launch.
[project.entry-points."agentsquire.skills"]
agentsquire = "agentsquire"

[dependency-groups]
dev = [
    "build",
    "hatchling",
    "pip",
    "pytest",
    "typer>=0.26.8",
]

[tool.hatch.build.targets.sdist]
# Default-deny allowlist: only these paths ship in the source distribution.
# hatchling always includes pyproject.toml, README.md, and LICENSE, so they are
# not listed. Anything not matched here (CLAUDE.md, docs/projects, scripts/,
# bugs.md, ...) never ships, regardless of what is tracked in the tree. The
# wheel is already limited to the package (src/agentsquire) by default.
include = [
    "/src",
    "/tests",
    "/CHANGELOG.md",
    "/docs/api.md",
    "/docs/harnesses.md",
]

# Force-include the three canonical docs into the wheel so `guide` has a single
# authoritative source with no hand-maintained in-package duplicate. The sources
# live only under docs/ and README.md; nothing is committed under the package.
# README.md becomes the `integration` topic.
[tool.hatch.build.targets.wheel.force-include]
"docs/api.md" = "agentsquire/_docs/api.md"
"docs/harnesses.md" = "agentsquire/_docs/harnesses.md"
"README.md" = "agentsquire/_docs/integration.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
